--- a/Index.html
+++ b/Index.html
@@ -28,5 +28,15 @@
     We work quickly, carefully, and tastefully.</p>
 
 </section>
+
+<section>
+<img src="/images/img 1.png" alt="Aceasta este o imagine"/>
+<img src="/images/img 2.png" alt="Aceasta este o imagine" />
+<h1>The Best Barbershop in Your City</h1>
+<h4>If you want to add more confidence to your image, <br> you are definitely in the right place.</h4>  
+<p>We are a team that never rests on its laurels and yearns for change.<br> And once you fall into the hands of our master, you will never be the same again.<br> We are a team that is always on the same wavelength with clients.<br> Therefore, we are always ready to improve everyone who comes to us!</p>
+<button> BOOK A SERVICE </button>
+</section>
+
     </body>
 </html>
